prevodjenje sa Goranom

--- a/views/index.jade
+++ b/views/index.jade
@@ -8,8 +8,8 @@ html
 
     div.container
       div.jumbotron.text-center
-        h1 Dobrodošli u SmartPark 
-        p Pametan pogled na Vaš parking...  
-        p: a.btn.btn-primary.btn-lg(href='/dashboard' role='button') Dashboard
+        h1= t('index.title')
+        p= t('index.description') 
+        p: a.btn.btn-primary.btn-lg(href='/dashboard' role='button')= t('index.dashboard')
 
     include footer
