--- a/views/nfc.jade
+++ b/views/nfc.jade
@@ -3,6 +3,11 @@ extends layout
 block title
   h2
     = t('nfc.title')
+  if command
+    span.label.label-success#labelCommand= command.buffer().toString('hex')
+    |&nbsp;
+  if response
+    span.label.label-success#labelResponse= response.buffer().toString('hex')
 
 block content
   if messages.errors
@@ -18,40 +23,40 @@ block content
       tr
         td= t('nfc.getDateTime')
         td: a.btn.btn-default(href='/nfc/getDateTime')= t('nfc.getDateTime')
-        td= getDateTime ? getDateTime.buffer().toString('hex') : ""
+        td= getDateTime ? "" + getDateTime.year + "-" + getDateTime.month + "-" + getDateTime.day + " " + getDateTime.hour + ":" + getDateTime.minute + ":" + getDateTime.second : ""
       tr
         td= t('nfc.setDateTime')
         td
           form.form-inline(action='/nfc/setDateTime' method="get")
-            input.form-control#dateTime(type='text' name="dateTime" placeholder="YYMMDDHHMISS" value="#{dateTime? dateTime: ''}")
+            input.form-control#dateTime(type='text' name="dateTime" placeholder="YYYYMMDDHHMISS" value="#{dateTime? dateTime: ''}")
             button.btn.btn-default(type="submit")= t('nfc.setDateTime')
-        td= setDateTime ? setDateTime.buffer().toString('hex') : ""
+        td= setDateTime ? setDateTime : ""
       tr
         td= t('nfc.stopRFWork')
         td: a.btn.btn-default(href='/nfc/stopRFWork')= t('nfc.stopRFWork')
-        td= stopRFWork ? stopRFWork.buffer().toString('hex') : ""
+        td= stopRFWork ? stopRFWork : ""
       tr
         td= t('nfc.startRFWork')
         td: a.btn.btn-default(href='/nfc/startRFWork')= t('nfc.startRFWork')
-        td= startRFWork ? startRFWork.buffer().toString('hex') : ""
+        td= startRFWork ? startRFWork : ""
       tr
         td= t('nfc.resetReader')
         td: a.btn.btn-default(href='/nfc/resetReader')= t('nfc.resetReader')
-        td= resetReader ? resetReader.buffer().toString('hex') : ""
+        td= resetReader ? resetReader : ""
       tr
         td= t('nfc.getFirmwareVersion')
         td: a.btn.btn-default(href='/nfc/getFirmwareVersion')= t('nfc.getFirmwareVersion')
-        td= getFirmwareVersion ? getFirmwareVersion.buffer().toString('hex') : ""
+        td= getFirmwareVersion ? "" + getFirmwareVersion.flag + "." +  getFirmwareVersion.major + "." + getFirmwareVersion.minor + "." + getFirmwareVersion.release : ""
       tr
         td= t('nfc.getTrigState')
         td: a.btn.btn-default(href='/nfc/getTrigState')= t('nfc.getTrigState')
-        td= getTrigState ? getTrigState.buffer().toString('hex') : ""
+        td= getTrigState ? getTrigState.state.toString(2) : ""
       tr
         td= t('nfc.getRelayState')
         td: a.btn.btn-default(href='/nfc/getRelayState')= t('nfc.getRelayState')
         td
           if getRelayState
-            if getRelayState.fields.state & 0x01
+            if getRelayState.relay1
               span.label.label-success
                 |Relay 1&nbsp;
                 span.glyphicon.glyphicon-ok
@@ -60,7 +65,7 @@ block content
                 | Relay 1&nbsp;
                 span.glyphicon.glyphicon-remove
             |&nbsp;&nbsp;
-            if getRelayState.fields.state & 0x02
+            if getRelayState.relay2
               span.label.label-success
                 |Relay 2&nbsp;
                 span.glyphicon.glyphicon-ok
@@ -73,18 +78,17 @@ block content
         td
           form.form-inline(action='/nfc/setRelayState' method="get")
             label.checkbox-inline
-              - var checked1 = relay1? true: false
-              input(type="checkbox" name="relay1" value="relay1" checked=(checked1?"checked":undefined))
+              - var checked1 = setRelayState ? (setRelayState.relay1 ? setRelayState.relay1 : false) : false;
+              input(type="checkbox" name="relay1" value="relay1" checked=(checked1 ? "checked" : undefined))
               |Relay 1
             label.checkbox-inline
-              - var checked2 = relay2? true: false
-              input(type="checkbox" name="relay2"  value="relay2" checked=(checked2?"checked":undefined))
+              - var checked2 = setRelayState ? (setRelayState.relay2 ? setRelayState.relay2 : false) : false;
+              input(type="checkbox" name="relay2"  value="relay2" checked=(checked2 ? "checked" : undefined))
               |Relay 2
             button.btn.btn-default(type="submit")= t('nfc.setRelayState')
-        td= setRelayState ? setRelayState.buffer().toString('hex') : ""
+        td= setRelayState ? "DONE" : ""
       tr
         td= t('nfc.masterAcknowledge')
         td: a.btn.btn-default(href='/nfc/masterAcknowledge')= t('nfc.masterAcknowledge')
         td= masterAcknowledge ? masterAcknowledge : ""
 
-    
