--- a/views/nfc.jade
+++ b/views/nfc.jade
@@ -35,6 +35,10 @@ block content
             button.btn.btn-default(type="submit")= t('nfc.setParameterRSSI')
         td= setParameterRSSI ? setParameterRSSI : ""
       tr
+        td= t('nfc.getIDBuffer')
+        td: a.btn.btn-default(href='/nfc/getIDBuffer')= t('nfc.getIDBuffer')
+        td= getIDBuffer ? getIDBuffer : ""
+      tr
         td= t('nfc.getDateTime')
         td: a.btn.btn-default(href='/nfc/getDateTime')= t('nfc.getDateTime')
         td= getDateTime ? "" + getDateTime.year + "-" + getDateTime.month + "-" + getDateTime.day + " " + getDateTime.hour + ":" + getDateTime.minute + ":" + getDateTime.second : ""
