--- a/views/nfc.jade
+++ b/views/nfc.jade
@@ -35,9 +35,9 @@ block content
             button.btn.btn-default(type="submit")= t('nfc.setParameterRSSI')
         td= setParameterRSSI ? setParameterRSSI : ""
       tr
-        td= t('nfc.getIDBuffer')
-        td: a.btn.btn-default(href='/nfc/getIDBuffer')= t('nfc.getIDBuffer')
-        td= getIDBuffer ? getIDBuffer : ""
+        td= t('nfc.getIdBuffer')
+        td: a.btn.btn-default(href='/nfc/getIdBuffer')= t('nfc.getIdBuffer')
+        td= getIdBuffer ? getIdBuffer : ""
       tr
         td= t('nfc.getDateTime')
         td: a.btn.btn-default(href='/nfc/getDateTime')= t('nfc.getDateTime')
