--- a/views/navbar.jade
+++ b/views/navbar.jade
@@ -24,6 +24,10 @@ block navbar
            span.glyphicon.glyphicon-th
            |&nbsp;
            = t('navbar.nfc')
+         li: a(href="/nfc")
+           span.glyphicon.glyphicon-th
+           |&nbsp;
+           = t('navbar.dokumentacija')
 
        ul.nav.navbar-nav.navbar-right
          li: a(href="/about")
