--- a/views/documentation.jade
+++ b/views/documentation.jade
@@ -5,8 +5,9 @@ block title
     = t('documentation.title') 
  
 block content
-  p
-    |About aSmartPark...
-    
-  p
-    |About Audiotex...  
+
+     a(href="/C:/Users/goran/Desktop/avion.jpg") test
+
+
+
+
