--- a/views/navbar.jade
+++ b/views/navbar.jade
@@ -24,10 +24,10 @@ block navbar
            span.glyphicon.glyphicon-th
            |&nbsp;
            = t('navbar.nfc')
-         li: a(href="/nfc")
+         li: a(href="/documentation")
            span.glyphicon.glyphicon-th
            |&nbsp;
-           = t('navbar.dokumentacija')
+           = t('navbar.documentation')
 
        ul.nav.navbar-nav.navbar-right
          li: a(href="/about")
