--- a/views/documentation.jade
+++ b/views/documentation.jade
@@ -6,8 +6,11 @@ block title
  
 block content
 
-     a(href="file/c:/kinez.pdf") kinez
+     a(href='./Users/goran/Desktop/kinez.pdf') Kinez
+    
 
+    
+    
 
 
 
