--- a/views/navbar.jade
+++ b/views/navbar.jade
@@ -1,5 +1,5 @@
 block navbar
-  nav.navbar.navbar-default
+  nav.navbar.navbar-inverse
    div.container
      div.navbar-header
        button.navbar-toggle(type="button" data-toggle="collapse" data-target="#rightNavbar")
