add image on dashboard

--- a/views/index.jade
+++ b/views/index.jade
@@ -11,5 +11,6 @@ html
         h1= t('index.title')
         p= t('index.description') 
         p: a.btn.btn-primary.btn-lg(href='/dashboard' role='button')= t('index.dashboard')
+        div.media: img.media-object(src="/img/dashboard.jpg")
 
     include footer
