yr8600 suport added

--- a/views/navbar.jade
+++ b/views/navbar.jade
@@ -24,6 +24,10 @@ block navbar
            span.glyphicon.glyphicon-th
            |&nbsp;
            = t('navbar.nfc')
+         li: a(href="/yr8600")
+           span.glyphicon.glyphicon-th
+           | &nbsp;
+           = t('navbar.yr8600')
          li: a(href="/documentation")
            span.glyphicon.glyphicon-file
            |&nbsp;
