--- a/views/documentation.jade
+++ b/views/documentation.jade
@@ -8,7 +8,10 @@ block content
   p
     ul.list-group
       li.list-group-item: a(href="/doc/kinez-prevod.pdf" target="_blank")
-        |Kinez
+        |Reader setup
       li.list-group-item: a(href="/doc/CommunicationProtocolInstructionOfActiveReader.pdf" target="_blank")
         |Communication protocol
-
+      li.list-group-item: a(href="/doc/Instruction of NFC-2411.pdf" target="_blank")
+        |NFC - 2411
+      li.list-group-item: a(href="/doc/Instruction of 2.45GHz Reader Software.pdf" target="_blank")
+        |Reader software
